--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -9,6 +9,7 @@
 
 h1, h2, h3, h4{
     font-family: 'Rubik', sans-serif;
+    font-weight: 600;
 }
 
 h6{
@@ -22,6 +23,10 @@ p{
     font-size: 0.8rem;
     color: #0D0D0D;
     font-weight: 600;
+}
+
+img{
+    max-width: 100%;
 }
 
 /* Cabecera */
@@ -59,7 +64,6 @@ p{
 .itemSocial{
     color: #F25C05;
     font-size: 1.5rem;
-    
 }
 
 .itemSocial:hover{
@@ -233,9 +237,8 @@ p{
 
 .contTexto p{
     width:100%;
-    font-size: 0.8rem;
-    /* font-weight: 600; */
-    letter-spacing: 1.5px;
+    font-size: 1rem;
+    font-weight: 600;
     margin: 0.5rem;
     line-height: 120%;
 }
@@ -353,15 +356,13 @@ p{
     display: flex;
     height: 20%;
     width: 100%;
-    padding: 0.5rem 0 0 1rem;
-    
+    padding: 0.5rem 0 0 1rem;    
 }
 
 .formTexto p{
     font-size: 1rem;
     font-weight: 600;
 }
-
 
 .formu{
     display: flex;
@@ -521,12 +522,10 @@ p{
     padding: 1rem;
     width:100%;
     align-items:center;
-    /* justify-content: center; */
     position: fixed;
     bottom: 0;
     height: 8vh;
     width: 100%;
-    z-index: 50;
 }
 
 .pietext{ 
@@ -534,7 +533,6 @@ p{
     text-decoration: none;
     font-size: 1rem;
 }
-
 
 /* corte #1 */
 /*para notebook de hasta 1030px de ancho*/
@@ -591,11 +589,11 @@ font-size: 1.3rem;
     font-size: 1rem;
 }
 
-
 /* Antecedentes Laborales */
 
 .seccionAntecedentes{
     padding-top: 10vh;
+    margin-bottom: 50px;
 }
 
 .tituloAntecedentes h2{
@@ -703,7 +701,6 @@ font-size: 1.3rem;
     font-size: 1.5rem;
 }
 
-
 .mapaForm{
     height: 75%;
 }
@@ -729,7 +726,359 @@ font-size: 1.3rem;
 /* corte #2 */
 /*para celular de hasta 767pxpx de ancho*/
 @media screen and (max-width:767px){
+/* Cabecera */
+
+.cabecera{
+    padding-top: 2rem;
+    position:relative;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.cajaLogo{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 0;
+    flex-direction: column;
+    row-gap: 1;
+}    
+
+.img__logo{
+    display: none;
+}
+
+.img__foto{
+    width: 100px;
+    border-radius: 100px;
+}
+
+.cajaLogo h2{
+    font-size: 1rem;
+    margin: 0;
+}
+
+.cajaNav{
+    display: flex;
+    padding-left: 0;
+    margin-right: 0;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 1rem;
+}
+
+.navtext{ 
+    font-size: 1rem;
+}
+
+.cajaSocial{
+    margin-right: 0;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    column-gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    border-top: #F25C05 solid 2px;
+    border-bottom: #F25C05 solid 2px;
+}
+
+.itemSocial{
+    color: #F25C05;
+    font-size: 1rem;
+}
+
+.itemSocial:hover{
+    color: #94BF75;
+}
+
+/* Acerca */
+
+.seccionAcerca{
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content:flex-end;
+    align-items:center;
+}
+
+.contenidoPrimario{
+    width: 80%;
+    margin-right: 3rem;
+}
+
+.contenidoPrimario p{
+    font-size: 1rem;
+}
+
+.contenidoPrimario h1{
+    font-size: 1.5rem;
+}
+
+.contenidoPrimario h2{
+   font-size: 1.2rem;
+}
+
+/* Antecedentes Laborales */
+
+.seccionAntecedentes{
+    height: auto;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    padding-top: 0;
+}
+
+.tituloAntecedentes{
+    margin-bottom: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.tituloAntecedentes h2{
+    font-size: 1.5em;
+}
+
+.contenedorAntecedentes{
+    height: auto;
+    width: 80%;
+    display: flex;
+    column-gap: 1rem;
+}
+
+.tarjetaAntecedentes{
+    display: flex;
+    border: solid #F25C05 2px;
+    border-radius: 25px;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.contImg{
+    width: 70%;
+}
+
+.tarjetaImg{
+    width: 180px;
+}
+
+.cajaTitulo{
+    border-bottom: #96c93e solid 2px;
+    display: flex;
+    justify-content: center;
+    font-family: 'Rubik';
+    font-size: 1rem;
+    border-right: none;
+}
+
+.contTexto p{
+    width:95%;
+    font-size: 0.8rem;
+    font-weight: 600;
+    margin: 0.6rem;
+}
+
+/*Formación académica*/
+
+.formacion{
+    display: flex;
+    height: auto;  
+    padding-top: 0;
+}
+
+.fotoFormacion{
+    display: none;
+}
+
+.formacionDos{
+    height: auto;
+    width: 100%;
+}
+
+.formacionDos p{
+    font-size: 0.9rem;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+}
+
+.tituloFormacion h2{
+    font-size: 1.6rem;
+    color: #0D0D0D;
+    font-family: 'Rubik',sans-serif;
+    border-bottom: #F25C05 solid 3px;
+    padding-bottom: 0.8rem;
+}
+
+/*contacto*/
+
+.seccionFormulario{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-bottom: 1rem;
+    padding-top: 3rem;
+    height: auto;
+    width: 100%;
+}
+
+.formIzquierda{
+    width: 90%;
+}
+
+.tituloForm{
+    border-bottom: #96c93e solid 3px;
+    width: 100%;
+    display: flex;
+    height: 10%;
+    font-family: 'Rubik';
+    font-size: 1.5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.formTexto{
+    display: flex;
+    height: 20%;
+    width: 100%;
+    padding: 0.5rem 0 0 1rem;
+    
+}
+
+.formTexto p{
+    font-size: 1rem;
+    font-weight: 600;
+}
 
 
+.formu{
+    display: flex;
+    height: 80%;
+    flex-direction: column;
+    width: 100%;
+    justify-content: flex-start;
+}
 
+.etiqueta{
+    color: #96c93e;
+    width: 100%;
+    padding: 0.5rem 0;
+    font-size: 1.2rem;
+}
+
+.input-text{
+    width: 100%;
+    font-size: 1rem;
+    border: #F25C05 3px solid;
+    margin-bottom: 10px;
+    padding-left: 1rem;
+    height: 2.5rem;
+    outline: none;
+    border-radius: 5px;
+}
+
+.input-text:focus{
+    background-color: #F25C05;
+    border: #96c93e 3px solid;
+    opacity: 0.5;
+}
+
+.mensajeForm{
+    resize: none;
+    height: 6rem;
+    width: 100%;
+    font-size: 1rem;
+    border: #F25C05 3px solid;
+    outline: none;
+    border-radius: 5px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+.mensajeForm:focus{
+    background-color: #F25C05;
+    border: #96c93e 3px solid;
+    opacity: 0.7;
+}
+
+.boton{
+    background-color: #F25C05;
+    border: solid 3px #96c93e;
+    border-radius: 5px;
+    color: #0D0D0D;
+    height: 45px;
+    width: 30%;
+    font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.boton:hover{
+    background-color: #96c93e;
+    color: #0D0D0D;
+    border: #F25C05 solid 3px;
+}
+
+.formDerecha{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+}
+
+.datosForm{
+    display: flex;
+    flex-direction: column;
+}
+
+.contInfo{
+    padding: 1rem;
+    width: 100%;
+}
+
+.contMapa{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 50%;
+    margin-bottom: 3rem;
+}
+
+.mapaForm{
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+}
+
+.mapaTexto{
+    display: flex;
+    width: 100%;
+    height: 20%;
+}
+
+/* footer */
+.pie{
+
+    padding: 0.5rem;
+    width:100%;
+    align-items:center;
+    position: fixed;
+    bottom: 0;
+    height: 9vh;
+    width: 100%;
+}
+
+.pietext{ 
+    font-size: 0.7rem;
+}
 }
