--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -64,6 +64,7 @@ img{
 .itemSocial{
     color: #F25C05;
     font-size: 1.5rem;
+
 }
 
 .itemSocial:hover{
@@ -117,7 +118,7 @@ img{
 /* Acerca */
 
 .seccionAcerca{
-    background-image: linear-gradient(to right,rgb(0 0 0 /.5),rgb(0 0 0 /.5)), url("/Assets/imagenes/Foto_portada.jpg");
+    background-image: linear-gradient(to right,rgb(0 0 0 /.5),rgb(0 0 0 /.5)), url("./Assets/imagenes/Foto_portada.jpg");
     background-repeat: no-repeat;
     height:95vh;
     width: 100%;
